tests/messages/errors/nm_error.hl7
MSH|^~\&|TEST_SENDER|FAC|REC|FAC|20260308213000||ORU^R01|MSG_NM_ERR|P|2.5
OBR|1||||||||||||||||INVALID_NM
OBX|1|NM|TEST_FIELD||NOT_A_NUMBER||||||F
